--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-http-server": "^2.0.0",
-    "grunt-reload": "git://github.com/webxl/grunt-reload.git",
+    "grunt-reload": "https://github.com/webxl/grunt-reload.git",
     "grunt-shell": "^1.3.0",
     "grunt-ts": "^5.5.1",
     "handlebars": "^4.0.4",
@@ -20,6 +20,13 @@
     "typings": "^1.0.5"
   },
   "engines": {
-    "node": "~0.10.0"
+    "node": ">8.0.0"
+  },
+  "scripts": {
+    "bower-install": "bower install --allow-root",
+    "typings-install": "typings install",
+    "grunt-debug": "grunt debug",
+    "grunt-release": "grunt release",
+    "develop": "grunt devel"
   }
 }
