replacing grunt with webpack. using npm dependencies

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "mdwiki",
   "version": "0.1.0",
   "devDependencies": {
-    "bower": "^1.7.9",
+    "@types/handlebars": "^4.1.0",
+    "@types/jquery": "^3.3.31",
+    "css-loader": "3.2.0",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-concat": "^1.0.1",
@@ -11,22 +13,34 @@
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-http-server": "^2.0.0",
-    "grunt-reload": "https://github.com/webxl/grunt-reload.git",
     "grunt-shell": "^1.3.0",
-    "grunt-ts": "^5.5.1",
     "handlebars": "^4.0.4",
     "load-grunt-tasks": "*",
-    "typescript": "^1.8.0",
-    "typings": "^1.0.5"
+    "node-sass": "4.12.0",
+    "postcss-loader": "3.0.0",
+    "precss": "4.0.0",
+    "sass-loader": "8.0.0",
+    "style-loader": "1.0.0",
+    "ts-loader": "6.0.4",
+    "typescript": "3.6.3",
+    "webpack": "^4.39.3",
+    "webpack-cli": "3.3.8"
   },
   "engines": {
     "node": ">8.0.0"
   },
   "scripts": {
-    "bower-install": "bower install --allow-root",
     "typings-install": "typings install",
-    "grunt-debug": "grunt debug",
-    "grunt-release": "grunt release",
+    "handlebars": "handlebars -f tmp/MDwiki.templates.js -r templates -m templates/**/*.html",
+    "build-debug": "webpack --mode development && grunt debug",
+    "build-release": "grunt release",
     "develop": "grunt devel"
+  },
+  "dependencies": {
+    "bootstrap": "4.3.1",
+    "jquery": "3.4.1",
+    "jquery-colorbox": "1.6.4",
+    "popper.js": "1.15.0",
+    "prismjs": "1.17.1"
   }
 }
