--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "grunt-http-server": "^2.0.0",
     "grunt-shell": "^1.3.0",
     "handlebars-loader": "1.7.1",
+    "html-webpack-inline-source-plugin": "0.0.10",
+    "html-webpack-plugin": "3.2.0",
     "load-grunt-tasks": "*",
     "node-sass": "4.12.0",
     "postcss-loader": "3.0.0",
@@ -31,8 +33,7 @@
   },
   "scripts": {
     "typings-install": "typings install",
-    "build-debug": "webpack --mode development && grunt debug",
-    "build-release": "grunt release",
+    "build-debug": "webpack --mode development",
     "develop": "grunt devel"
   },
   "dependencies": {
