--- a/package.json
+++ b/package.json
@@ -7,12 +7,7 @@
     "css-loader": "3.2.0",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
-    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-less": "^1.3.0",
-    "grunt-contrib-uglify": "^1.0.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-http-server": "^2.0.0",
     "grunt-shell": "^1.3.0",
     "handlebars-loader": "1.7.1",
     "html-webpack-inline-source-plugin": "0.0.10",
@@ -26,15 +21,16 @@
     "ts-loader": "6.0.4",
     "typescript": "3.6.3",
     "webpack": "^4.39.3",
-    "webpack-cli": "3.3.8"
+    "webpack-cli": "3.3.8",
+    "webpack-dev-server": "3.8.0"
   },
   "engines": {
     "node": ">8.0.0"
   },
   "scripts": {
-    "typings-install": "typings install",
-    "build-debug": "webpack --mode development",
-    "develop": "grunt devel"
+    "build-debug": "webpack",
+    "develop": "webpack-dev-server --open",
+    "text": "grunt unittests"
   },
   "dependencies": {
     "bootstrap": "4.3.1",
